<resources>
    <string name="app_name">Crafty Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horizontal_logo">horizontal logo</string>
    <string name="photo_profile">photo profile</string>
    <string name="vertical_logo">vertical logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_us">Join Us!</string>
    <string name="add_button">add button</string>
    <string name="add_photo">Add Photo</string>
    <string name="back">Back</string>
    <string name="don_t_worry">Don\'t Worry!</string>
    <string name="forgot_password_message">Enter your email and you will get a password reset link in the email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="success">Success</string>
    <string name="success_forgot_password_icon">success forgot password icon</string>
    <string name="reset_link_has_been_sent_to_your_email">Reset link has been sent to your email</string>
    <string name="choose_one">Choose one</string>
    <string name="camera_icon">camera icon</string>
    <string name="popular_user">Popular User</string>
    <string name="trending_craft">Trending Craft</string>
    <string name="timelines">Timelines</string>
    <string name="public_icon">public icon</string>
    <string name="icon_popular_user">icon popular user</string>
    <string name="reader_icon">reader icon</string>
    <string name="review_icon">review icon</string>
    <string name="love_icon">love icon</string>
</resources>