<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".view.fragments.authentication.SuccessForgotPasswordFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/vertical_logo"
        android:src="@drawable/ic_logo_vertical" />

    <TextView
        style="@style/SemiBold36Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/success" />

    <TextView
        style="@style/Medium18Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset_link_has_been_sent_to_your_email" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/success_forgot_password_icon"
        android:src="@drawable/ic_forgotpassword" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Medium18Sp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/bg_radius16dp"
        android:backgroundTint="@color/green_accent"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/light_primary" />

</LinearLayout>