<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".view.fragments.authentication.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/vertical_logo"
        android:src="@drawable/ic_logo_vertical" />

    <TextView
        android:layout_width="match_parent"
        style="@style/SemiBold36Sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp">

        <EditText
            android:id="@+id/etEmail"
            style="@style/Regular18Sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_radius16dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="54dp"
            android:paddingEnd="18dp"
            android:textColorHint="@color/light_disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/ic_email"
            android:contentDescription="@string/email_icon"
            app:layout_constraintBottom_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintTop_toTopOf="@id/etEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/etPassword"
            style="@style/Regular18Sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_radius16dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="54dp"
            android:paddingEnd="18dp"
            android:textColorHint="@color/light_disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/ic_password"
            android:contentDescription="@string/password_icon"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toTopOf="@id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/Regular18Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/green_accent" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Medium18Sp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_radius16dp"
        android:backgroundTint="@color/green_accent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/light_primary" />

    <Button
        android:id="@+id/btnSignUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_radius16dp"
        android:backgroundTint="@color/light_primary"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/dark_accent"
        android:textSize="18sp" />

</LinearLayout>