<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    android:fillViewport="true"
    tools:context=".view.fragments.authentication.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/vertical_logo"
            android:src="@drawable/ic_logo_vertical" />

        <TextView
            style="@style/SemiBold36Sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/join_us" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <ImageView
                android:id="@+id/ivPhotoProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_circle_stroke"
                android:contentDescription="@string/photo_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/light_disabled"
                android:contentDescription="@string/add_button"
                android:padding="6dp"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toStartOf="@id/ivPhotoProfile"
                app:layout_constraintTop_toTopOf="@id/ivPhotoProfile" />

            <TextView
                android:id="@+id/tvAddPhoto"
                style="@style/Regular14Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:textColor="@color/light_disabled"
                app:layout_constraintBottom_toBottomOf="@id/ivPhotoProfile"
                app:layout_constraintEnd_toEndOf="@id/ivPhotoProfile"
                app:layout_constraintStart_toStartOf="@id/ivPhotoProfile"
                app:layout_constraintTop_toTopOf="@id/ivPhotoProfile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layoutFullname"
            layout="@layout/layout_edit_text_general" />

        <include
            android:id="@+id/layoutUsername"
            layout="@layout/layout_edit_text_general" />

        <include
            android:id="@+id/layoutEmail"
            layout="@layout/layout_edit_text_general" />

        <include
            android:id="@+id/layoutPassword"
            layout="@layout/layout_edit_text_general" />

        <include
            android:id="@+id/layoutConfirmationPassword"
            layout="@layout/layout_edit_text_general" />

        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginVertical="24dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Medium18Sp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_radius16dp"
            android:backgroundTint="@color/green_accent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/light_primary" />

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/bg_radius16dp"
            android:backgroundTint="@color/light_primary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/dark_accent"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>