<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_primary"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="56dp"
    tools:context=".view.fragments.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/horizontal_logo"
            android:src="@drawable/ic_logo_horizontal" />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/photo_profile"
            android:padding="3dp"
            android:src="@drawable/dummy_photo_vector" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="24dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/SemiBold24Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_user" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_popular_user"
                android:layout_marginTop="24dp" />

            <TextView
                style="@style/SemiBold24Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/trending_craft" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrendingCraft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_trending_craft"
                android:layout_marginTop="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/SemiBold24Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timelines" />

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ivPublic"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_public"
                    android:backgroundTint="@color/green_accent"
                    android:contentDescription="@string/public_icon" />

                <ImageView
                    android:id="@+id/ivFollowing"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/ic_following"
                    android:contentDescription="@string/public_icon" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTimelines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_timeline"
                android:layout_marginTop="24dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>