<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="368dp"
    android:layout_marginBottom="24dp">

    <ImageView
        android:id="@+id/ivPhotoProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/photo_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_timeline_craft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_picture_stack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/photo_profile"
            android:padding="3dp"
            android:src="@drawable/dummy_photo_vector" />

        <TextView
            android:id="@+id/tvFullName"
            style="@style/Medium14Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/light_primary"
            tools:text="Iqbal Shafiq Rozaan" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/light_primary"
        app:layout_constraintBottom_toTopOf="@id/llContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Shoes from old newspapers" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivLove"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/love_icon"
            android:src="@drawable/ic_love" />

        <TextView
            android:id="@+id/tvLove"
            style="@style/SemiBold14Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:textColor="@color/light_primary"
            tools:text="140" />

        <ImageView
            android:id="@+id/ivReview"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/review_icon"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/tvReview"
            style="@style/SemiBold14Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:textColor="@color/light_primary"
            tools:text="140" />

        <ImageView
            android:id="@+id/ivReader"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/reader_icon"
            android:src="@drawable/ic_reader" />

        <TextView
            android:id="@+id/tvReader"
            style="@style/SemiBold14Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:textColor="@color/light_primary"
            tools:text="140" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>